--- a/package.xml
+++ b/package.xml
@@ -10,12 +10,16 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>iri_asterx1_gps/msg/GPS_nav.msg</build_depend>
-  <build_depend>ros_cpp</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <build_depend>iri_asterx1_gps</build_depend>
+  <run_depend>iri_asterx1_gps</run_depend>
 
-  <run_depend>iri_asterx1_gps/msg/GPS_nav.msg</run_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
+
+  <build_depend>ros_cpp</build_depend>
   <run_depend>ros_cpp</run_depend>
+
+  <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
 
 </package>
