--- a/package.xml
+++ b/package.xml
@@ -22,4 +22,13 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
 
+
+  <build_depend>visualization_msgs</build_depend>
+  <run_depend>visualization_msgs</run_depend>
+
+  <build_depend>nav_msgs</build_depend>
+  <run_depend>nav_msgs</run_depend>
+
+  <build_depend>tf</build_depend>
+  <run_depend>tf</run_depend>
 </package>
