changed message: time is only in SatsVector and not in each single element

--- a/package.xml
+++ b/package.xml
@@ -19,9 +19,14 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
 
-
   <build_depend>visualization_msgs</build_depend>
   <run_depend>visualization_msgs</run_depend>
+
+  <build_depend>iri_common_drivers_msgs</build_depend>
+  <run_depend>iri_common_drivers_msgs</run_depend>
+
+  <build_depend>iri_asterx1_gps_msgs</build_depend>
+  <run_depend>iri_asterx1_gps_msgs</run_depend>
 
   <build_depend>nav_msgs</build_depend>
   <run_depend>nav_msgs</run_depend>
